# climate_change_temp

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
climate_change_temp/: global_land_temperature_countrystate.py
climatechangetemperature/: global_land_temperature_countrystate.py
src/climate_change_temp/: GlobalLandTemperaturesByState.py  GlobalLandTemperaturesByStateObj.py
tests/: GlobalLandTemperaturesByStateTests.py  __init__.py  global_land_temperature_countrystate_tests.py
tests/databrick_scripts/: V_climate_change_with_lib_obj_short.dbc  V_climate_change_with_lib_short.dbc
