[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "climate_change_temp"
version = "0.0.1"
authors = [
  { name="Krzysztof Zielinski", email="kzielinsk@gmail.com" },
]
description = "Library read temps by contry,state from CSV. Find the maximum temperature for a given country and state. Write the result to a file on DBFS in parquet format."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/kzielins/climate_change_temp"
"Bug Tracker" = "https://github.com/kzielins/climate_change_temp/issues"
