[build-system]
requires = [
    "setuptools>=61.0",
    "numpy>=1.21.6",
    "pandas>=1.3.5",
    "pyspark==3.0.1"]

build-backend = "setuptools.build_meta"

[project]
name = "climatechangetemperature"
version = "0.1.04"
authors = [
  { name="Krzysztof Zielinski", email="kzielinsk@gmail.com" },
]
description = "Library read source temperatures for contry,state from CSV. Find the maximum temperature for a given country and state. Write the result in parquet format."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Custom License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/kzielins/climate_change_temp"
"Bug Tracker" = "https://github.com/kzielins/climate_change_temp/issues"

